firefox bugs fixed

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <div class="main-most-container">
-        <p class="main-heading">NEET Rank Predictor 2025-2026</p>
+        <!-- <p class="main-heading">NEET Rank Predictor 2025-2026</p> -->
         <div class="main-container">
             <div class="box-container">
                 <div class="heading-container">
-                    <p class="heading-txt">Ready to predict your rank?</p>
+                    <p class="heading-txt">Want to know your NEET rank?</p>
                     <p class="motivation-txt">Your dedication to your goal is inspiring!</p>
                 </div>
                 <div class="score-input">
@@ -31,10 +31,10 @@
 
         <div class="Displayresult"></div>
 
-        <div class="disclaimer">
+        <!-- <div class="disclaimer">
             Disclaimer: 
 The Rank Predictor is a statistical model based on inputs provided by users and analysis of previous year trends. The accuracy of the results provided by the Rank Predictor is therefore subject to such inherent limitations.
-        </div>
+        </div> -->
     </div>
 
     <script src="scripts/ranks.js"></script>
