--- a/index.html
+++ b/index.html
@@ -9,35 +9,44 @@
 </head>
 
 <body>
-    <div class="main-most-container">
-        <!-- <p class="main-heading">NEET Rank Predictor 2025-2026</p> -->
-        <div class="main-container">
-            <div class="box-container">
-                <div class="heading-container">
-                    <p class="heading-txt">Want to know your NEET rank?</p>
-                    <p class="motivation-txt">Your dedication to your goal is inspiring!</p>
-                </div>
-                <div class="score-input">
-                    <p class="neet-score-txt">NEET score out of 720</p>
-                    <input class="score-input-txt" type="text"  placeholder="Enter your score" required>
-                    <button class="predict-btn" onclick="displayResult();">Predict my rank</button>
+    <div class="page-container">
+        <div class="main-most-container">
+            <p class="main-heading">NEET Rank Predictor 2025-2026</p>
+            <div class="main-container">
+                <div class="box-container">
+                    <div class="heading-container">
+                        <p class="heading-txt">Want to know your NEET rank?</p>
+                        <p class="motivation-txt">Your dedication to your goal is inspiring!</p>
+                    </div>
+                    <div class="score-input">
+                        <p class="neet-score-txt">NEET score out of 720</p>
+                        <input class="score-input-txt" type="text" placeholder="Enter your score" required>
+                        <button class="predict-btn" onclick="displayResult();">Predict my rank</button>
 
+                    </div>
+                    <div class="allthebest">
+                        <p class="allthebest">Wishing you all the best for your NEET exam!!!</p>
+                    </div>
                 </div>
-                <div class="allthebest">
-                    <p class="allthebest">Wishing you all the best for your NEET exam!!!</p>
-                </div>
+            </div>
+
+            <div class="Displayresult"></div>
+
+            <div class="disclaimer">
+                Disclaimer:
+                The Rank Predictor is a statistical model based on inputs provided by users and analysis of previous
+                year trends. The accuracy of the results provided by the Rank Predictor is therefore subject to such
+                inherent limitations.
             </div>
         </div>
 
-        <div class="Displayresult"></div>
-
-        <!-- <div class="disclaimer">
-            Disclaimer: 
-The Rank Predictor is a statistical model based on inputs provided by users and analysis of previous year trends. The accuracy of the results provided by the Rank Predictor is therefore subject to such inherent limitations.
-        </div> -->
-    </div>
-
-    <script src="scripts/ranks.js"></script>
+        <script src="scripts/ranks.js"></script>
 </body>
+
+<div>
+    <footer>Made with &#128151; by <a href="https://pranavmr.com">Pranav MR</a></footer>
+</div>
+
+</div>
 
 </html>
